--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production node ./bin/www",
+    "start": "set NODE_ENV=production && node ./bin/www",
     "dev": "PORT=3500 DEBUG=backend:* nodemon ./bin/www"
   },
   "dependencies": {
