--- a/backend/package.json
+++ b/backend/package.json
@@ -8,21 +8,20 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "connect-flash": "^0.1.1",
+    "cookie": "^0.5.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
-    "ejs": "~3.1.7",
     "express": "~4.18.2",
-    "express-session": "^1.17.3",
     "helmet": "^6.0.1",
     "http-errors": "~1.6.3",
     "joi": "^17.8.3",
-    "memorystore": "^1.6.7",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.1"
   },
